--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+/* lesson code */
+
 .App {
   text-align: center;
 }
@@ -11,6 +13,18 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
+}
+
+.success {
+  background-color: green;
+  width: 50vw;
+  margin: 0 auto;
+}
+
+.failure {
+  background-color: red;
+  width: 50vw;
+  margin: 0 auto;
 }
 
 .App-header {
@@ -35,4 +49,35 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  width: 50vw;
+}
+
+input {
+  margin-top: 15px;
+}
+
+button {
+  margin-top: 30px;
+}
+
+.login-page {
+  background-color: aquamarine;
+}
+
+a {
+  display: block;
+}
+
+.movie-tile {
+  width: 50vw;
+  margin: 0 auto;
+  border-bottom: 1px solid green;
 }
