--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-/* lesson code */
+lesson code
 
 .App {
   text-align: center;
@@ -66,9 +66,9 @@ form {
   width: 50vw;
 }
 
-input {
+/* input {
   margin-top: 15px;
-}
+} */
 
 button {
   margin-top: 30px;
