--- a/src/App.css
+++ b/src/App.css
@@ -70,9 +70,9 @@ form {
   margin-top: 15px;
 } */
 
-button {
+/* button {
   margin-top: 30px;
-}
+} */
 
 .login-page {
   background-color: aquamarine;
