--- a/src/App.css
+++ b/src/App.css
@@ -14,23 +14,32 @@ lesson code
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
+/* .RestPassword-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: baseline;
+  color: #61dafb;
+} */
 .success {
-  background-color: green;
-  width: 50vw;
+  /* background-color: green; */
+  /* width: 50vw; */
   margin: 0 auto;
-  margin-top: 10px;
   text-align: center;
-  padding: 10px;
-  border: 2px solid darkgray;
-  border-radius: 50%;
+  /* padding: 10px; */
+  /* border: 2px solid darkgray; */
+  /* border-radius: 50%; */
 }
 
 .failure {
-  background-color: red;
   width: 50vw;
   margin: 0 auto;
-  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  flex-basis: 1;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 .App-header {
@@ -62,7 +71,7 @@ form {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 0 auto;
+  /* margin: 0 auto; */
   width: 50vw;
 }
 
@@ -74,7 +83,7 @@ form {
   margin-top: 30px;
 } */
 
-.login-page {
+.login-page, .registerPage, .RestPassword-container {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
@@ -86,6 +95,50 @@ form {
   background-color: aquamarine;
   padding: 20px 0px;
   height: 350px;
+}
+.text-warning {
+  margin: 0 auto;
+}
+.choose-role {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  height: fit-content;
+}
+.choose-role > * {
+  margin: 0 20px;
+}
+.confirmationResults {
+  margin-top: 20%;
+  display:  flex;
+  flex-direction: column;
+  justify-content: center;
+  justify-items: center;
+  align-items: center;
+  align-content: center;
+  height: 150px;
+}
+.confirmationResults > button {
+  box-sizing: border-box;
+}
+.confirmationResults > button:active {
+  transform: scale(1.2);
+}
+.confirmationResults > button:hover {
+  transform: scale(1.2);
+  background-color: #61dafb;
+}
+.confirmationResults > p {
+  text-align: center;
+  font-weight: bolder;
+}
+.registerDoctorReq {
+  display: flex;
+  flex-direction: column;
+  justify-content: baseline;
+  align-items: center;
+  align-content: center;
+  box-shadow: #040607;
 }
 .login-page > button {
   margin-top: 0;
