--- a/src/components/search/SearchBar.css
+++ b/src/components/search/SearchBar.css
@@ -48,15 +48,11 @@ input:focus {
   flex-direction: column;
   width: 450px;
   height: auto;
+  max-height: 50vh;
   background-color: white;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   overflow: hidden;
   overflow-y: auto;
-  justify-content: center;
-}
-
-.dataResult::-webkit-scrollbar {
-  display: none;
 }
 
 .dataResult .dataItem {
