--- a/src/components/search/SearchBar.css
+++ b/src/components/search/SearchBar.css
@@ -1,19 +1,26 @@
-.search {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+.backgroundContainer {
+  height: 95vh;
+  background: url(../../assets/pexels-klaus-nielsen-6303655.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.searchContainer {
+  position: relative;
+  top: 20vh;
 }
 
 .searchInputs {
-  margin-top: 105px;
+  margin: 0 auto;
+  width: 35vw;
   height: 60px;
+  margin-top: 5vh;
   display: flex;
   justify-content: center;
   align-items: center;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  background-color: white;
 }
-
 .search input {
   background-color: white;
   border: 0;
@@ -23,17 +30,15 @@
   font-size: 18px;
   padding: 15px;
   height: 30px;
-  width: 400px;
-  margin: 0;
+  width: 35vw;
+  margin: 0 auto;
 }
-
 .searchIcon {
   margin: 10px;
   background-color: white;
   display: grid;
   place-items: center;
 }
-
 input:focus {
   outline: none;
 }
@@ -41,27 +46,34 @@ input:focus {
 #clearBtn svg {
   font-size: 30px;
 }
-
 .dataResult {
+  margin: 0 auto;
   margin-top: 10px;
   display: flex;
   flex-direction: column;
   width: 450px;
   height: auto;
-  max-height: 50vh;
+  max-height: 20vh;
   background-color: white;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   overflow: hidden;
   overflow-y: auto;
 }
-
 .dataResult .dataItem {
   width: 100%;
   height: 50px;
   display: flex;
-  align-items: center;
   color: black;
   padding: 10px;
+}
+
+.dataHeading {
+  margin: 0 0 0 10px;
+  display: flex;
+  justify-content: center;
+  font-weight: bold;
+  font-size: 1.2rem;
+  color: #285596;
 }
 
 .dataItem p {
@@ -72,7 +84,6 @@ input:focus {
 a {
   text-decoration: none;
 }
-
 a:hover {
   background-color: lightgrey;
 }
@@ -81,4 +92,15 @@ a:hover {
   cursor: pointer;
   width: 30px;
   height: 30px;
+}
+
+#mainPhrase {
+  font-size: 4rem;
+  color: white;
+  font-weight: bold;
+}
+
+#subPhrase {
+  font-size: 1.5rem;
+  color: white;
 }
