--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,4 @@
-lesson code
-
-.App {
+lesson code .App {
   text-align: center;
 }
 
@@ -83,7 +81,9 @@ form {
   margin-top: 30px;
 } */
 
-.login-page, .registerPage, .RestPassword-container {
+.login-page,
+.registerPage,
+.RestPassword-container {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
@@ -110,7 +110,7 @@ form {
 }
 .confirmationResults {
   margin-top: 20%;
-  display:  flex;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   justify-items: center;
@@ -128,6 +128,38 @@ form {
   transform: scale(1.2);
   background-color: #61dafb;
 }
+.changePassword-container {
+  margin: auto;
+  border: 5px solid gray;
+  padding: 10px;
+  background-color: rgb(112, 112, 112);
+  z-index: -1;
+  height: fit-content;
+  width: fit-content;
+}
+.changePassword-form {
+  box-sizing: border-box;
+  padding: 10px;
+  z-index: 100;
+  box-shadow: 20px 20px 50px 10px pink inset;
+}
+/* .changePassword {
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  grid-auto-rows: minmax(auto, auto);
+  column-gap: 10px;
+  row-gap: 10px;
+}
+.changePassword > div {
+  display: grid;
+  grid-template-columns: 2fr 2fr 1fr;
+  column-gap: 10px;
+  row-gap: 10px;
+} */
+/* .changePassword > div > * {
+  margin-right: 5px;
+  position: relative;
+} */
 .confirmationResults > p {
   text-align: center;
   font-weight: bolder;
