--- a/src/App.css
+++ b/src/App.css
@@ -195,3 +195,16 @@ a {
   margin: 0 auto;
   border-bottom: 1px solid green;
 }
+
+.star-rating>button {
+  background-color: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+/* .on {
+  color: #000;
+}
+.off {
+  color: #ccc;
+} */
