--- a/src/components/search/SearchBar.css
+++ b/src/components/search/SearchBar.css
@@ -8,6 +8,7 @@
 .searchContainer {
   position: relative;
   top: 20vh;
+  margin: 0 auto;
 }
 
 .searchInputs {
@@ -100,6 +101,8 @@ a:hover {
   font-size: 4rem;
   color: white;
   font-weight: bold;
+  width: 50vw;
+  margin: 0 auto;
 }
 
 #subPhrase {
