--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,9 @@ html {
 }
 body {
   font-family: "Montserrat", sans-serif;
-  height: 100vh;
+  height: 100%;
   width: 100%;
+  background-color: #eff8ff;
 }
 
 #root {
@@ -254,12 +255,12 @@ footer {
 }
 
 .doctorsIndex,
+.noResult,
 .doctorShow {
-  background-color: #eff8ff;
-}
-
-.noResult {
-  height: 95vh;
+  background-size: cover;
+  min-height: 100%;
+  width: 100%;
+  height: 100vh;
   background-color: #eff8ff;
 }
 
